--- a/HackAndSlash2D/Assembly-CSharp.csproj
+++ b/HackAndSlash2D/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Skrypty\EnemyMovement.cs" />
+     <Compile Include="Assets\Skrypty\GameManager.cs" />
      <Compile Include="Assets\Skrypty\PlayerMovement.cs" />
      <Compile Include="Assets\Skrypty\Spawn.cs" />
      <Compile Include="Assets\Skrypty\SpawnerMovement.cs" />
